--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,19 @@
-Django>=5.0,<6.0
-gunicorn>=21.2
-psycopg[binary]>=3.1
-python-dotenv>=1.0
-stripe>=8.0
-reportlab>=4.0
-whitenoise>=6.6
+asgiref==3.11.1
+certifi==2026.1.4
+charset-normalizer==3.4.4
+Django==5.2.11
+gunicorn==25.0.2
+idna==3.11
+packaging==26.0
+pillow==12.1.0
+psycopg==3.3.2
+psycopg-binary==3.3.2
+python-dotenv==1.2.1
+reportlab==4.4.9
+requests==2.32.5
+sqlparse==0.5.5
+stripe==14.3.0
+typing_extensions==4.15.0
+tzdata==2025.3
+urllib3==2.6.3
+whitenoise==6.11.0
