--- a/.env
+++ b/.env
@@ -1,10 +1,22 @@
+# =====================
+# Django
+# =====================
 DEBUG=True
 SECRET_KEY=change-me
 ALLOWED_HOSTS=localhost,127.0.0.1
-DATABASE_URL=postgresql://lordogie:Hailmary@12345.@localhost:5432/pipelinekids
 
+# IMPORTANT: encode @ as %40
+DATABASE_URL=postgresql://lordogie:Hailmary%4012345.@localhost:5432/pipelinekids
+
+# =====================
+# Stripe (MVP)
+# =====================
 STRIPE_SECRET_KEY=sk_test_xxx
+STRIPE_PUBLISHABLE_KEY=pk_test_xxx
 STRIPE_WEBHOOK_SECRET=whsec_xxx
-STRIPE_PRICE_ID=price_xxx
+STRIPE_PRICE_ID_MONTHLY=price_xxx
 
+# =====================
+# Site
+# =====================
 SITE_URL=http://127.0.0.1:8000
