--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-asgiref==3.11.1
+asgiref==3.11.1 
 certifi==2026.1.4
 charset-normalizer==3.4.4
 Django==5.2.11
@@ -6,7 +6,6 @@ gunicorn==25.0.2
 idna==3.11
 packaging==26.0
 pillow==12.1.0
-psycopg==3.3.2
 psycopg-binary==3.3.2
 python-dotenv==1.2.1
 reportlab==4.4.9
@@ -14,6 +13,7 @@ requests==2.32.5
 sqlparse==0.5.5
 stripe==14.3.0
 typing_extensions==4.15.0
+django-embed-video==1.4.9
 tzdata==2025.3
 urllib3==2.6.3
 whitenoise==6.11.0
