--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ gunicorn==25.0.2
 idna==3.11
 packaging==26.0
 pillow==12.1.0
-psycopg-binary==3.3.2
+psycopg2-binary==2.9.9
 python-dotenv==1.2.1
 reportlab==4.4.9
 requests==2.32.5
